release 2026r1 - juni